<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_organisation_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/orgNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_user_org_name_here"
            android:maxLines="1"
            android:singleLine="true"
            android:text="square"
            tools:ignore="HardcodedText">

            <requestFocus />
        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/repo_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/repoNameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_repo_name_here"
            android:maxLines="1"
            android:singleLine="true"
            android:text="retrofit"
            tools:ignore="HardcodedText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewClosedPRBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?colorPrimary"
            android:text="@string/view_closed_pull_request"
            android:textColor="?colorOnPrimary"
            app:cornerRadius="10dp" />

    </LinearLayout>
</layout>